fix: wrap block stats on mobile

--- a/src/css/dataCard.sass
+++ b/src/css/dataCard.sass
@@ -3,6 +3,7 @@
 
 .dataCardsContainer
   display: flex
+  flex-wrap: wrap
   gap: 10px
   .dataCardItem
     background: #0000001e
@@ -12,7 +13,8 @@
     align-items: center
     justify-content: center
     border-radius: 6px
-    padding:20px
+    padding: 20px
+    margin: 4px
 
   .dataCardTile
     color: $white
